	- Remove conditional compilation checks from SSLeay.xs and
	  compatilibty notes from SSLeay.pod for OpenSSL versions
	  earlier than 0.9.8. This includes all 0.9.7 and earlier
	  releases down to 0.9.3a. Update tests respectively.
	- Add OpenSSL 3.2 and LibreSSL 3.8 minor releases to GitHub CI
	  testing. Update existing OpenSSL releases to 1.1.1w, 3.0.12
	  and 3.1.4.

1.93_02 2023-02-22
	- Update ppport.h to version 3.68. This eliminates thousands of
	  compound-token-split-by-macro compiler warnings when building Net-SSLeay with
	  Clang 12 or greater. Partially fixes GH-383.
	- Silence compound-token-split-by-macro warnings when building Net-SSLeay with
	  Clang 12 or greater. Fixes the remainder of GH-383.
	- When building Net-SSLeay, search for the openssl binary in the same directory
	  in which Perl is installed (i.e. $Config{prefix}/bin/). Thanks to Henrik
	  Grimler for the patch.
	- Expose EVP_PKEY_security_bits. Thanks to Felipe Gasper.
	- Major update to Gihub Actions configuration. Thanks to Felipe Gasper.
	  New testing targets are:
	    - OpenSSL and LibreSSL on Alpine Linux on i386, x390x, arm32v6,
	      ar32v7 and arm64v8 architectures.
	    - OpenSSL and LibreSSL on Ubuntu on i386, x390x, ar32v7 and arm64v8
	      architectures.
	    - OpenSSL on FreeBSD 13.0, not enabled yet because of GH #272 and #394
	    - LibreSSL on FreeBSD 13.0
	    - LibreSSL on OpenBSD 6.9
	    - LibreSSL on OpenBSD 7.1
	    - Cygwin on x86_64
	- Fix compilation failure using cl. Microsoft cl compiler do
	  not like when preprocessor directives are inside a
	  macro. Fixes GH-403. Thanks to Jean-Damien Durand.
	- Update CTX_use_PKCS12_file() and CTX_use_PKCS12_file() to
	  use BIO functions for avoiding "no OPENSSL_Applink" runtime
	  errors. Fixes GH-281 and RT#101638. Thanks to Jean-Damien
	  Durand.
	- Add to README.Win32 more information about OPENSSL_Applink
	  and how it may be needed with FILE pointers and POSIX/Unix